# jasmin-django-utils

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
jasmin_django_utils/: __init__.py  _version.py  admin.py  appsettings.py  crossdb.py  enumfield.py
jasmin_django_utils/api/: hooks.py  permissions.py  viewsets.py
jasmin_django_utils/models/: behaviours.py
jasmin_django_utils/templates/admin/export/: export_form.html
jasmin_django_utils/templatetags/: mailto_support.py
