[tool.poetry]
name = "jasmin-django-utils"
version = "1.0.6"
description = "Django utilities used by JASMIN apps."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
